kubernetes/apps/media/steam/app/l4route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: steam-https
spec:
  parentRefs:
    - name: lan-l4-steam
      sectionName: https
  rules:
    - backendRefs:
        - name: steam
          port: 47984
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: steam-http
spec:
  parentRefs:
    - name: lan-l4-steam
      sectionName: http
  rules:
    - backendRefs:
        - name: steam
          port: 47989
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: steam-web-ui
spec:
  parentRefs:
    - name: lan-l4-steam
      sectionName: web-ui
  rules:
    - backendRefs:
        - name: steam
          port: 47990
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: steam-rtsp
spec:
  parentRefs:
    - name: lan-l4-steam
      sectionName: rtsp
  rules:
    - backendRefs:
        - name: steam
          port: 48010
